make component name mandatory